--- a/src/Grafica/Administrador_ventana.form
+++ b/src/Grafica/Administrador_ventana.form
@@ -470,8 +470,8 @@
                                           <Component id="agregar_textoContrasenia" min="-2" pref="343" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="ocultarPswd1" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
-                                              <Component id="verPswd1" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                                              <Component id="ocultarPswd" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                                              <Component id="verPswd" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
@@ -494,8 +494,8 @@
                                           <Component id="agregar_textoContrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="ocultarPswd1" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
-                                          <Component id="verPswd1" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                                          <Component id="ocultarPswd" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                                          <Component id="verPswd" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -505,7 +505,7 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                                   <Component id="agregar_botonAgregar" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <EmptySpace pref="205" max="32767" attributes="0"/>
+                                  <EmptySpace pref="207" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -544,6 +544,14 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JPasswordField" name="agregar_textoContrasenia">
+                          <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="18" style="0"/>
+                            </Property>
+                          </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregar_textoContraseniaActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JLabel" name="agregar_cargo">
                           <Properties>
@@ -587,24 +595,24 @@
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregar_botonAgregarActionPerformed"/>
                           </Events>
                         </Component>
-                        <Component class="javax.swing.JLabel" name="verPswd1">
+                        <Component class="javax.swing.JLabel" name="verPswd">
                           <Properties>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                               <Image iconType="3" name="/imagenes/botonMostrar.png"/>
                             </Property>
                           </Properties>
                           <Events>
-                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="verPswd1MouseClicked"/>
+                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="verPswdMouseClicked"/>
                           </Events>
                         </Component>
-                        <Component class="javax.swing.JLabel" name="ocultarPswd1">
+                        <Component class="javax.swing.JLabel" name="ocultarPswd">
                           <Properties>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                               <Image iconType="3" name="/imagenes/botonOcultar.png"/>
                             </Property>
                           </Properties>
                           <Events>
-                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ocultarPswd1MouseClicked"/>
+                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ocultarPswdMouseClicked"/>
                           </Events>
                         </Component>
                       </SubComponents>
@@ -640,19 +648,12 @@
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="botonEliminar" min="-2" pref="151" max="-2" attributes="0"/>
                                               <Component id="modificar_botonModificar" min="-2" pref="151" max="-2" attributes="0"/>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Group type="103" groupAlignment="1" attributes="0">
-                                                      <Component id="modificar_textoUsuario" min="-2" pref="447" max="-2" attributes="0"/>
-                                                      <Group type="102" attributes="0">
-                                                          <Component id="modificar_contrasenia" min="-2" pref="169" max="-2" attributes="0"/>
-                                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                          <Component id="modificar_textoContrasenia" min="-2" pref="397" max="-2" attributes="0"/>
-                                                      </Group>
-                                                  </Group>
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Component id="ocultarPswd" min="-2" pref="30" max="-2" attributes="0"/>
-                                                      <Component id="verPswd" min="-2" pref="30" max="-2" attributes="0"/>
+                                              <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                                                  <Component id="modificar_textoUsuario" min="-2" pref="447" max="-2" attributes="0"/>
+                                                  <Group type="102" attributes="0">
+                                                      <Component id="modificar_contrasenia" min="-2" pref="169" max="-2" attributes="0"/>
+                                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                      <Component id="modificar_textoContrasenia" min="-2" pref="397" max="-2" attributes="0"/>
                                                   </Group>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
@@ -661,7 +662,7 @@
                                                   <Component id="modificar_opcionesCargo" min="-2" pref="171" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
-                                          <EmptySpace min="0" pref="304" max="32767" attributes="0"/>
+                                          <EmptySpace min="0" pref="352" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -685,15 +686,9 @@
                                       <Component id="modificar_textoUsuario" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="3" attributes="0">
-                                          <Component id="modificar_contrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                          <Component id="modificar_textoContrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                                          <Component id="ocultarPswd" min="-2" pref="30" max="-2" attributes="0"/>
-                                          <Component id="verPswd" min="-2" pref="30" max="-2" attributes="0"/>
-                                      </Group>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="modificar_contrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                      <Component id="modificar_textoContrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
@@ -704,7 +699,7 @@
                                   <Component id="modificar_botonModificar" min="-2" pref="40" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="botonEliminar" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <EmptySpace pref="16" max="32767" attributes="0"/>
+                                  <EmptySpace pref="18" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -802,6 +797,11 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JPasswordField" name="modificar_textoContrasenia">
+                          <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="18" style="0"/>
+                            </Property>
+                          </Properties>
                         </Component>
                         <Component class="javax.swing.JComboBox" name="modificar_opcionesCargo">
                           <Properties>
@@ -854,26 +854,6 @@
                           </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonEliminarActionPerformed"/>
-                          </Events>
-                        </Component>
-                        <Component class="javax.swing.JLabel" name="verPswd">
-                          <Properties>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/imagenes/botonMostrar.png"/>
-                            </Property>
-                          </Properties>
-                          <Events>
-                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="verPswdMouseClicked"/>
-                          </Events>
-                        </Component>
-                        <Component class="javax.swing.JLabel" name="ocultarPswd">
-                          <Properties>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/imagenes/botonOcultar.png"/>
-                            </Property>
-                          </Properties>
-                          <Events>
-                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ocultarPswdMouseClicked"/>
                           </Events>
                         </Component>
                       </SubComponents>
